--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
+    "nodemon": "^1.18.11",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "plaid": "^3.1.1",
     "pnp-webpack-plugin": "1.2.1",
