back end changes

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.2",
+    "bcrypt": "^3.0.6",
     "bfj": "6.1.1",
     "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cookie-parser": "^1.4.4",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -38,6 +40,7 @@
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.5.0",
@@ -71,6 +74,7 @@
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.4.5",
     "url-loader": "1.1.2",
+    "uuid": "^3.3.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
