--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "typescript": "^3.4.5",
     "url-loader": "1.1.2",
     "uuid": "^3.3.2",
+    "uuidv4": "^4.0.0",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
